# calendar-scheduling-env

./: .gitignore  Dockerfile  README.md  SUBMISSION.md  app.py  conftest.py  docker-compose.yml  generate_chart.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  train.py  upload_to_hf.py  validate-submission.sh
scheduling_env/: __init__.py  baseline.py  env.py  evaluate.py  grader.py  models.py  registration.py  tasks.py  visualize.py
scratch/: clean_app.py
server/: app.py
tests/: test_env.py
