[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scheduling-env"
version = "1.0.0"
description = "An OpenEnv Gymnasium environment for AI-driven calendar scheduling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CalendarSchedulingEnv Team"},
]
keywords = ["gymnasium", "reinforcement-learning", "scheduling", "openenv", "calendar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29.0,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0"]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
all = ["matplotlib>=3.7.0", "pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.entry-points."gymnasium.envs"]
__root__ = "scheduling_env.registration:register_envs"

[project.scripts]
calendar-env-baseline = "scheduling_env.baseline:main"
calendar-env-evaluate = "scheduling_env.evaluate:main"
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["scheduling_env*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
